# proposalsapp

./: .dockerignore  .env.erpc.example  .gitignore  .pnp.cjs  .prettierignore  CLAUDE.md  Cargo.toml  OBSERVABILITY_MIGRATION.md  README.md  codecov.yml  docker-compose.dokploy.yml  ecosystem.config.cjs  ecosystem.config.js  erpc.yaml  eslint.config.mjs  lcov.info  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  rust.json  rustfmt.toml  test.json  test2.json  tsconfig.base.json  tsconfig.json  update-deps.sh
apps/detective/: Cargo.toml  Dockerfile  chain_data.rs  database.rs  indexer.rs  main.rs  rpc_providers.rs  snapshot_api.rs
apps/detective/abis/: aave_v3_gov_mainnet.json  arb_token.json  arbitrum_security_council_election.json  arbitrum_security_council_member_removal.json  arbitrum_security_council_nomination.json  nouns_proposals_gov.json  zerox_treasury.json
apps/detective/indexers/: _lido_mainnet_proposals.rs  _lido_mainnet_votes.rs  aave_v2_mainnet_proposals.rs  aave_v2_mainnet_votes.rs  aave_v3_avalanche_votes.rs  aave_v3_mainnet_proposals.rs  aave_v3_mainnet_votes.rs  aave_v3_polygon_votes.rs  arbitrum_core_proposals.rs  arbitrum_core_votes.rs  arbitrum_council_elections.rs  arbitrum_council_members_proposals.rs  arbitrum_council_members_votes.rs  arbitrum_council_nomination_proposals.rs  arbitrum_council_nomination_votes.rs  arbitrum_council_nominations.rs  arbitrum_delegations.rs  arbitrum_treasury_proposals.rs  arbitrum_treasury_votes.rs  arbitrum_voting_power.rs  compound_mainnet_proposals.rs  compound_mainnet_votes.rs  dydx_mainnet_proposals.rs  dydx_mainnet_votes.rs  ens_mainnnet_proposals.rs  ens_vote_indexer.rs  frax_alpha_mainnet_proposals.rs  frax_alpha_mainnet_votes.rs  frax_omega_mainnet_proposals.rs  frax_omega_mainnet_votes.rs  gitcoin_v1_mainnet_proposals.rs  gitcoin_v1_mainnet_votes.rs  gitcoin_v2_mainnet_proposals.rs  gitcoin_v2_mainnet_votes.rs  hop_mainnet_proposals.rs  hop_mainnet_votes.rs  lido_mainnet_proposals.rs  lido_mainnet_votes.rs  maker_executive_mainnet_proposals.rs  maker_executive_mainnet_votes.rs  (+12 more)
apps/detective/proposals/: Cargo.toml  proposals_consumer.rs  proposals_producer.rs
apps/detective/proposals/consumer/: Cargo.toml  Dockerfile  proposals_consumer.rs
apps/detective/proposals/consumer/handlers/: aave_v2.rs  aave_v3.rs  arbitrum_core.rs  arbitrum_treasury.rs  compound.rs  dydx.rs  ens.rs  frax_alpha.rs  frax_omega.rs  gitcoin_v1.rs  gitcoin_v2.rs  hop.rs  interest_protocol.rs  lido.rs  maker_executive.rs  maker_poll.rs  mod.rs  nouns.rs  (+11 more)
apps/detective/proposals/handlers/: aave_v2.rs  arbitrum_core.rs  dydx.rs  ens.rs  frax_alpha.rs  frax_omega.rs  gitcoin_v2.rs  interest_protocol.rs  nouns_proposal.rs  optimism.rs  snapshot.rs
apps/detective/proposals/producer/: Cargo.toml  Dockerfile  proposals_producer.rs
apps/detective/sanity/: Cargo.toml  Dockerfile  snapshot_sanity.rs
apps/detective/votes/: Cargo.toml  votes_consumer.rs  votes_dead_letter.rs  votes_producer.rs
apps/detective/votes/consumer/: Cargo.toml  Dockerfile  votes_consumer.rs
apps/detective/votes/handlers/: aave_v3_mainnet.rs  arbitrum_treasury.rs  dydx.rs  ens.rs  frax_omega.rs  gitcoin_v1.rs  interest_protocol.rs  maker_executive.rs  maker_poll.rs  snapshot.rs  zerox_treasury.rs
apps/detective/votes/producer/: Cargo.toml  Dockerfile  votes_producer.rs
apps/discourse/: Cargo.toml  Dockerfile  api_handler.rs  db_handler.rs  discourse_api.rs  lib.rs  main.rs  metrics.rs
apps/discourse/fetchers/: categories.rs  mod.rs  posts.rs  topics.rs  users.rs
apps/discourse/indexers/: categories.rs  likes.rs  mod.rs  posts.rs  revisions.rs  topics.rs  users.rs
apps/discourse/models/: categories.rs  likes.rs  mod.rs  nice.json  posts.rs  revisions.rs  test.json  topics.rs  users.rs
apps/discourse/models/revisions/: inline_changes.rs  markdown_changes.rs  mod.rs
apps/discourse/tests/: discourse_integration.rs  live_discourse.rs
apps/discourse/users/: Cargo.toml  Dockerfile  discourse_users.rs  models.rs
apps/mapper/: Cargo.toml  Dockerfile  config.rs  embeddings.rs  grouper.rs  karma.rs  llm_ops.rs  main.rs  mapper.yaml  metrics.rs  redis_cache.rs  redis_embeddings.rs  semantic_grouper.rs  test_group_backtest.rs
apps/mapper/embeddings/: mod.rs  ollama.rs  store.rs  types.rs
apps/mapper/grouper/: load.rs  matching.rs  persist.rs  url.rs
apps/mapper/karma/: api.rs  sync.rs
apps/rindexer/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  rindexer.yaml
apps/rindexer/abis/: ARBToken.abi.json  UniGovernor.abi.json
apps/rindexer/src/: lib.rs  main.rs  supervision.rs
apps/rindexer/src/extensions/: block_time.rs  db_extension.rs  ethereum_rpc.rs  mod.rs  snapshot_api.rs
apps/rindexer/src/tasks/: block_times.rs  ended_onchian_proposals.rs  mod.rs  onchain_proposals_updates.rs  snapshot_indexer.rs  snapshot_indexer_tests.rs  snapshot_proposals.rs  snapshot_votes.rs
apps/rindexer/tests/: supervision.rs
apps/seed/: Cargo.toml  data.rs  seed.rs
libs/rust/db/: Cargo.toml
libs/rust/db-indexer/: Cargo.toml
libs/rust/scanners/: Cargo.toml
libs/rust/scanners/src/: arbiscan.rs  etherscan.rs  lib.rs  optimistic_scan.rs
libs/rust/seaorm/: Cargo.toml
libs/rust/seaorm/src/: countdown_cache.rs  dao.rs  dao_discourse.rs  dao_handler.rs  dao_indexer.rs  dao_settings.rs  delegate.rs  delegate_to_discourse_user.rs  delegate_to_voter.rs  delegation.rs  discourse_category.rs  discourse_post.rs  discourse_post_like.rs  discourse_post_revision.rs  discourse_topic.rs  discourse_user.rs  email_verification.rs  job_queue.rs  kysely_migration.rs  kysely_migration_lock.rs  lib.rs  notification.rs  prelude.rs  proposal.rs  proposal_group.rs  sea_orm_active_enums.rs  subscription.rs  user.rs  user_push_notification_subscription.rs  user_session.rs  user_settings.rs  user_to_voter.rs  user_verification.rs  vote.rs  voter.rs  voting_power.rs
libs/rust/utils/: Cargo.toml
libs/rust/utils/src/: errors.rs  lib.rs  rabbitmq_callbacks.rs  telemetry.rs  test_utils.rs  tracing.rs  types.rs  warnings.rs
(+1907 files in other folders)
