[workspace]
members = [
    "apps/discourse",
    "apps/mapper",
    "apps/rindexer",
    "libs/rust/db",
    "libs/rust/utils",
]

resolver = "2"

[workspace.dependencies]
alloy = { version = "1.2.1", features = ["full"] }
alloy-ens = { version = "1.2.1", features = ["contract", "provider"] }
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.8"
backtrace = "0.3.76"
bincode = "2.0.1"
chrono = "0.4.42"
csv = "1.4.0"
dotenv = "0.15.0"
fancy-regex = "0.16.2"
fastembed = "5.5.0"
futures = "0.3.31"
gag = "1.0"
html-escape = "0.2.13"
indicatif = "0.18.3"
lazy_static = "1.5.0"
llm_client = "0.0.7"
llm_models = "0.0.3"
mockito = "1.7"
ollama-rs = { version = "0.3", features = ["default"] }
once_cell = "1.21.3"
oneshot = "0.1.11"
proposalsapp-db = { path = "libs/rust/db" }
proptest = "1.9"
rand = "0.9.2"
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
regex = "1.12.2"
reqwest = { version = "0.12.28", default-features = false }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
rindexer = { git = "https://github.com/joshstevens19/rindexer", branch = "release/0.29.0", package = "rindexer" }
scraper = "0.24.0"
sea-orm = { version = "1.1.19", default-features = false }
serde = "1.0.228"
serde_json = "1.0.147"
serial_test = "3.2.0"
sha2 = "0.10"
thiserror = "2.0.17"
tiktoken-rs = "0.9.1"
tokio = "1.48.0"
tokio-retry = "0.3.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
utils = { path = "libs/rust/utils" }
uuid = "1.19"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = true
debug-assertions = true
rpath = false
