[workspace]
members = [
    "apps/discourse",
    "apps/rindexer",
    "libs/rust/db",
    "libs/rust/utils",
]

resolver = "2"

[workspace.dependencies]
alloy = { version = "1.8.3", features = ["full"] }
alloy-ens = { version = "1.8.3", features = ["contract", "provider"] }
anyhow = "1.0.102"
async-trait = "0.1.89"
axum = "0.8.8"
backtrace = "0.3.76"
bincode = "3.0.0"
chrono = "0.4.44"
csv = "1.4.0"
dotenv = "0.15.0"
fancy-regex = "0.17.0"
fastembed = "5.13.0"
futures = "0.3.32"
gag = "1.0"
html-escape = "0.2.13"
indicatif = "0.18.4"
lazy_static = "1.5.0"
llm_client = "0.0.7"
llm_models = "0.0.3"
mockito = "1.7"
once_cell = "1.21.4"
oneshot = "0.2.1"
proposalsapp-db = { path = "libs/rust/db" }
proptest = "1.11"
rand = "0.10.0"
redis = { version = "1.1.0", features = ["tokio-comp", "connection-manager"] }
regex = "1.12.3"
reqwest = { version = "0.13.2", default-features = false }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
rindexer = { git = "https://github.com/joshstevens19/rindexer", branch = "release/0.37.2", package = "rindexer" }
rustls = "0.23.36"
scraper = "0.26.0"
sea-orm = { version = "1.1.20", default-features = false }
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
serial_test = "3.4.0"
testcontainers = "0.27.2"
thiserror = "2.0.18"
tokio = "1.51.0"
tokio-retry = "0.3.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
utils = { path = "libs/rust/utils" }
uuid = "1.23"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = true
debug-assertions = true
rpath = false
