[package]
name = "detective"
version = "0.2.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["full"] }
alloy-chains = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
proposalsapp-db = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rust_decimal = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "registry",
    "env-filter",
    "json",
] }
utils = { workspace = true }

[[bin]]
name = "detective"
path = "main.rs"
