[package]
name = "discourse"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
fancy-regex = { workspace = true }
futures = { workspace = true }
html-escape = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
oneshot = { workspace = true }
opentelemetry = { workspace = true }
proposalsapp-db = { path = "../../libs/rust/db" }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "cookies"] }
scraper = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "registry",
    "env-filter",
    "json",
] }
utils = { path = "../../libs/rust/utils" }

[[bin]]
name = "discourse"
path = "main.rs"
