[package]
name = "discourse"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[[bin]]
name = "discourse"
path = "main.rs"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
fancy-regex = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
oneshot = { workspace = true }
proposalsapp-db = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls", "cookies"] }
scraper = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }

[dev-dependencies]
serial_test = { workspace = true }
testcontainers = { workspace = true }
