[package]
name = "mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["full"] }
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
fastembed = { workspace = true }
gag = "1.0"  # Used by llm_ops module for output suppression
lazy_static = { workspace = true }
llm_client = { workspace = true }
llm_models = { workspace = true }
once_cell = { workspace = true }
proposalsapp-db = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tiktoken-rs = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "json",
    "env-filter",
] }
utils = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[[bin]]
name = "mapper"
path = "main.rs"
