[package]
name = "mapper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mapper"
path = "main.rs"

[features]
default = []
llm-grouping = ["ollama-rs", "sha2"]

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }

# Optional dependencies for LLM-based grouping
ollama-rs = { workspace = true, optional = true }
once_cell = { workspace = true }
proposalsapp-db = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "json",
    "env-filter",
] }
utils = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
