[package]
name = "proposalsapp-rindexer"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
ethers = { workspace = true, features = ["rustls", "openssl"] }
lazy_static = { workspace = true }
once_cell = { workspace = true }
proposalsapp-db-indexer = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rindexer = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-retry = { workspace = true }
tracing = { workspace = true }
utils = { workspace = true }

[[bin]]
name = "proposalsapp-rindexer"
path = "src/main.rs"
