[package]
name = "proposalsapp-rindexer"
version = "1.0.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["full"] }
alloy-ens = { workspace = true, features = ["contract", "provider"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
proposalsapp-db = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
rindexer = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "json",
    "env-filter",
] }
utils = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }
mockito = { workspace = true }
proptest = { workspace = true }

[[bin]]
name = "proposalsapp-rindexer"
path = "src/main.rs"
