[package]
name = "seed"
version = "0.1.0"
edition = "2021"

[dependencies]
seaorm = { path = "../../libs/rust/seaorm" }
utils = { path = "../../libs/rust/utils" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
itertools = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
futures = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "registry",
    "env-filter",
    "json",
] }
num-bigint = { workspace = true }
dotenv = { workspace = true }


[[bin]]
name = "seed"
path = "seed.rs"
