[package]
name = "seed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
chrono = { workspace = true }
dotenv = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
regex = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
seaorm = { path = "../../libs/rust/seaorm" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "registry",
    "env-filter",
    "json",
] }
utils = { path = "../../libs/rust/utils" }

[[bin]]
name = "seed"
path = "seed.rs"
