[package]
name = "votes"
version = "0.1.0"
edition = "2021"

[dependencies]
seaorm = { path = "../../../libs/rust/seaorm" }
contracts = { path = "../../../libs/rust/contracts" }
utils = { path = "../../../libs/rust/utils" }

#utils
serde = "=1.0.197"
serde_json = "=1.0.114"
chrono = "=0.4.35"
anyhow = { version = "=1.0.80", features = ["backtrace"] }
itertools = "0.12.1"
reqwest = { version = "=0.11.25", default-features = false, features = [
    "json",
    "rustls-tls",
] }
regex = "=1.10.3"
tokio = { version = "=1.36.0", features = ["full"] }
futures = "=0.3.30"
redis-work-queue = "0.1.6"
redis = { version = "=0.23", features = [
    "aio",
    "async-std-comp",
    "connection-manager",
] }

#db
sea-orm = { version = "=0.12.14", default-features = false, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }

#ethers
ethers = "=2.0.14"

#tracing
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = [
    "registry",
    "env-filter",
    "json",
] }
num-bigint = "=0.4.4"
dotenv = "0.15.0"

[build-dependencies]
ethers = "=2.0.14"

[[bin]]
name = "votes_producer"
path = "votes_producer.rs"

[[bin]]
name = "votes_consumer"
path = "votes_consumer.rs"
