[package]
name = "proposalsapp-db-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
serde = { workspace = true }
serde_json = { workspace = true }
