[package]
name = "scanners"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "=0.4.35"
ethers = "=2.0.14"
anyhow = { version = "=1.0.80", features = ["backtrace"] }
reqwest = { version = "=0.11.25", default-features = false, features = [
    "json",
    "rustls-tls",
] }
reqwest-middleware = "=0.2.4"
reqwest-retry = "=0.4.0"
serde = "=1.0.197"
serde_json = "=1.0.114"
tokio = { version = "=1.36.0", features = ["macros"] }
tracing = "=0.1.40"
