[package]
name = "scanners"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
ethers = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
