[package]
name = "scanners"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
chrono = { workspace = true }
ethers = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
