[package]
name = "seaorm"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "=1.0.197"
serde_json = "=1.0.114"
sea-orm = { version = "=0.12.14", default-features = false, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
