[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
backtrace = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-appender-log = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
opentelemetry-http = { workspace = true }
opentelemetry-otlp = { workspace = true, features = [
    "logs",
    "metrics",
    "trace",
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
] }
opentelemetry-proto = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true, features = [
    "rt-tokio",
    "logs",
    "metrics",
    "trace",
] }
reqwest = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
seaorm = { path = "../seaorm" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "json"] }
