[package]
name = "utils"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
proposalsapp-db = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "json", "env-filter", "fmt"] }
