[package]
name = "proposals-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = { workspace = true }
chrono = { workspace = true }
contracts = { path = "../../../../libs/rust/contracts" }
dotenv = { workspace = true }
ethers = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
itertools = { workspace = true }
num-bigint = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
scanners = { path = "../../../../libs/rust/scanners" }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
seaorm = { path = "../../../../libs/rust/seaorm" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "registry",
    "env-filter",
    "json",
] }
utils = { path = "../../../../libs/rust/utils" }

[[bin]]
name = "proposals-consumer"
path = "proposals_consumer.rs"
