[package]
name = "proposals_producer"
version = "0.1.0"
edition = "2021"

[dependencies]
seaorm = { path = "../../../../libs/rust/seaorm" }
contracts = { path = "../../../../libs/rust/contracts" }
scanners = { path = "../../../../libs/rust/scanners" }
utils = { path = "../../../../libs/rust/utils" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
itertools = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
regex = { workspace = true }
rocket = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
amqprs = { workspace = true, features = ["tls", "urispec"] }
async-trait = { workspace = true }
dotenv = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
ethers = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "registry",
    "env-filter",
    "json",
] }
num-bigint = { workspace = true }

[[bin]]
name = "proposals_producer"
path = "proposals_producer.rs"
