[package]
name = "votes_producer"
version = "0.1.0"
edition = "2021"

[dependencies]
seaorm = { path = "../../../../libs/rust/seaorm" }
contracts = { path = "../../../../libs/rust/contracts" }
utils = { path = "../../../../libs/rust/utils" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
itertools = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"] }
regex = { workspace = true }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
amqprs = { workspace = true, features = ["tls", "urispec"] }
async-trait = { workspace = true }
dotenv = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
    "with-uuid",
] }
ethers = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "registry",
    "env-filter",
    "json",
] }
num-bigint = { workspace = true }

[build-dependencies]
ethers = { workspace = true }

[[bin]]
name = "votes_producer"
path = "votes_producer.rs"
